src/objects/Chemo_Summary_Form__c.object
<CustomObject>
    <fields>
        <fullName>Anthracycline_Regimen__c</fullName>
        <label>AnthracyclineRegimenTreatmentEndReason</label>
        <picklist>
            <picklistValues>
                <fullName>Treatment completed per protocol criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease progression, relapse during active treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity/side effects/complications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal after beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal prior to beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other complicating disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death during treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient declared ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Chemo Summary Forms</relationshipLabel>
        <relationshipName>Chemo_Summary_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Anthracycline_Therapy__c</fullName>
        <label>First Date of Anthracycline Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Investigational_Therapy__c</fullName>
        <label>First Date of Investigational Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Taxane_Therapy__c</fullName>
        <label>First Date of Taxane Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvestigationalRegimenTreatmentEndReason__c</fullName>
        <label>InvestigationalRegimenTreatmentEndReason</label>
        <picklist>
            <picklistValues>
                <fullName>Treatment completed per protocol criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease progression, relapse during active treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity/side effects/complications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal after beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal prior to beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other complicating disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death during treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient declared ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Anthracycline_Therapy__c</fullName>
        <label>Last Date of Anthracycline Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Investigational_Therapy__c</fullName>
        <label>Last Date of Investigational Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Taxane_Therapy__c</fullName>
        <label>Last Date of Taxane Therapy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Chemo_Summary_Form__c</referenceTo>
        <relationshipLabel>Chemo Summary Forms</relationshipLabel>
        <relationshipName>Chemo_Summary_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chemo_Summary_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxane_Regimen_Treatment_End_Reasons__c</fullName>
        <label>Taxane Regimen Treatment End Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Treatment completed per protocol criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease progression, relapse during active treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toxicity/side effects/complications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal after beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient withdrawal or refusal prior to beginning protocol therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other complicating disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Death during treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient declared ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Chemo Summary Forms</relationshipLabel>
        <relationshipName>Chemo_Summary_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pg_ChemoSummary_Id__c</fullName>
        <label>pg_ChemoSummary_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Chemo Summary Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chemo Summary Forms</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>First_Date_of_Anthracycline_future_valid</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>First_Date_of_Anthracycline_Therapy__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>First_Date_of_Anthracycline_Therapy__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Date_of_Investigational_date_valid</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>First_Date_of_Investigational_Therapy__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>First_Date_of_Investigational_Therapy__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Date_of_Taxane_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date</description>
        <errorConditionFormula>First_Date_of_Taxane_Therapy__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>First_Date_of_Taxane_Therapy__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Date_of_Anthracycline_date_validati</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Last_Date_of_Anthracycline_Therapy__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Last_Date_of_Anthracycline_Therapy__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Date_of_Investigation_date_validati</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Last_Date_of_Investigational_Therapy__c  &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Last_Date_of_Investigational_Therapy__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Last_Date_of_Taxane_date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Last_Date_of_Taxane_Therapy__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Last_Date_of_Taxane_Therapy__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>